--- a/index.html
+++ b/index.html
@@ -8,34 +8,60 @@
     <link rel="stylesheet" href="welcome.css" />
   </head>
   <body>
-    <div class="cssreel">
+    <div class="cssreel section">
       <h1 class="gradient-text">Hello <br />World!</h1>
     </div>
-    <div class="intro">
-      <h1>Namaste🙏🏻</h1>
+
+    <div class="intro section">
+      <h1>नमस्ते 🙏🏻</h1>
       <p>Myself Inesh and i love to code</p>
     </div>
-    <div class="languagesDisplay">
-      <div>Java</div>
-      <div>JavaScript</div>
-      <div>Python</div>
-      <div>Solidity</div>
-      <div>Css</div>
-      <div>Html</div>
+
+    <div class="languagesDisplay section">
+      <div class="lang_subdisplay">
+        <div>Java</div>
+        <div>JavaScript</div>
+        <div>Python</div>
+      </div>
+      <div class="lang_subdisplay">
+        <div>Solidity</div>
+        <div>Css</div>
+        <div>Html</div>
+      </div>
     </div>
-    <div class="languageDescription">
-      <div>Java</div>
-      <div>JavaScript</div>
-      <div>Python</div>
-      <div>Solidity</div>
-      <div>Css</div>
-      <div>Html</div>
+
+    <div class="languageDescription section">
+      <div class="subheading">
+        <h3>Java</h3>
+        <p class="subcontent">...</p>
+      </div>
+      <div class="subheading alternate">
+        <h3>JavaScript</h3>
+        <p class="subcontent">...</p>
+      </div>
+      <div class="subheading">
+        <h3>Python</h3>
+        <p class="subcontent">...</p>
+      </div>
+      <div class="subheading alternate">
+        <h3>Solidity</h3>
+        <p class="subcontent">...</p>
+      </div>
+      <div class="subheading">
+        <h3>Css</h3>
+        <p class="subcontent">...</p>
+      </div>
+      <div class="subheading alternate">
+        <h3>Html</h3>
+        <p class="subcontent">...</p>
+      </div>
     </div>
-    <div class="contacts">
-      <div>LinkedIN</div>
-      <div>Gmail</div>
-      <div>Github</div>
-      <div>Leetcode</div>
+
+    <div class="contactsSection">
+      <div class="contacts">LinkedIN</div>
+      <div class="contacts">Gmail</div>
+      <div class="contacts">Github</div>
+      <div class="contacts">Leetcode</div>
     </div>
   </body>
 </html>
