--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <div class="languageDescription section">
       <div class="subheading">
         <h3>Java</h3>
-        <button class="show-modal">Come on show up</button>
-        <div class="modal hidden">
+        <button class="show-modal" data-select="1">Come on show up</button>
+        <div class="modal hidden" data-select="1">
           <button class="close-modal">&times;</button>
           <div class="subcontent">
             <p>
@@ -56,88 +56,115 @@
       </div>
       <div class="subheading alternate">
         <h3>JavaScript</h3>
-        <div class="subcontent">
-          <p>
-            My love for javascript started as an escape from the horrors that
-            css gave me as a beginner web developer. Coming from java, i missed
-            writing logic and writing reason for things to work in html and css.
-            Hence i started learning javascript from online resources and a made
-            a few projects.
-          </p>
-          <img src="" alt="" />
-          <a href="www.google.com">link to Github</a>
-          <img src="" alt="" />
-          <a href=""></a>
+        <button class="show-modal" data-select="2">Come on show up</button>
+        <div class="modal hidden" data-select="2">
+          <button class="close-modal">&times;</button>
+          <div class="subcontent">
+            <p>
+              My love for javascript started as an escape from the horrors that
+              css gave me as a beginner web developer. Coming from java, i
+              missed writing logic and writing reason for things to work in html
+              and css. Hence i started learning javascript from online resources
+              and a made a few projects.
+            </p>
+            <img src="" alt="" />
+            <a href="www.google.com">link to Github</a>
+            <img src="" alt="" />
+            <a href=""></a>
+          </div>
         </div>
       </div>
       <div class="subheading">
         <h3>Python</h3>
-        <div class="subcontent">
-          <p>
-            I love to take up challanges, irrespective of how much they affect
-            my migraine. Hence i tried my hands in python. For many python is
-            the easiest language out there and syntax wise it is, but something
-            about the comfort comes as a challange. Unlike reels on instagram,
-            AI was the new cool thing i wanted to give a try.
-          </p>
-          <img
-            src="./Panigale-959-MY18-USA-04-Red-Slider-Gallery-906x510.jpg"
-            alt=""
-          />
-          <a href="www.google.com">link to github</a>
+        <button class="show-modal" data-select="3">Come on show up</button>
+        <div class="modal hidden" data-select="3">
+          <button class="close-modal">&times;</button>
+          <div class="subcontent">
+            <p>
+              I love to take up challanges, irrespective of how much they affect
+              my migraine. Hence i tried my hands in python. For many python is
+              the easiest language out there and syntax wise it is, but
+              something about the comfort comes as a challange. Unlike reels on
+              instagram, AI was the new cool thing i wanted to give a try.
+            </p>
+            <img src="" alt="" />
+            <a href="www.google.com">link to Github</a>
+            <img src="" alt="" />
+            <a href=""></a>
+          </div>
         </div>
       </div>
       <div class="subheading alternate">
         <h3>Solidity</h3>
-        <div class="subcontent">
-          <p>
-            Concept of decentralised information and ownership of data seems to
-            be the booming future in a world where privacy is at stake with
-            every single interaction over the internet. And when i came across
-            the fact that you can create de-centralised apps which can play with
-            my javascript, there was no holding me back. Sweet!
-          </p>
-          <img
-            src="./Panigale-959-MY18-USA-04-Red-Slider-Gallery-906x510.jpg"
-            alt=""
-          />
-          <a href="www.google.com">link to github</a>
+        <button class="show-modal" data-select="4">Come on show up</button>
+        <div class="modal hidden" data-select="4">
+          <button class="close-modal">&times;</button>
+          <div class="subcontent">
+            <p>
+              Concept of decentralised information and ownership of data seems
+              to be the booming future in a world where privacy is at stake with
+              every single interaction over the internet. And when i came across
+              the fact that you can create de-centralised apps which can play
+              with my javascript, there was no holding me back. Sweet!
+            </p>
+            <img src="" alt="" />
+            <a href="www.google.com">link to Github</a>
+            <img src="" alt="" />
+            <a href=""></a>
+          </div>
         </div>
       </div>
       <div class="subheading">
         <h3>Css</h3>
-        <div class="subcontent">
-          <p>
-            If you would ask my friends, they would call css to be my arch
-            enemey, but i dont have any friends so i guess we will never find
-            out. I cried everytime i had to design an element of this portfolio,
-            i hope that explains it.
-          </p>
-          <img
-            src="./Panigale-959-MY18-USA-04-Red-Slider-Gallery-906x510.jpg"
-            alt=""
-          />
-          <a href="www.google.com">link to github</a>
+        <button class="show-modal" data-select="5">Come on show up</button>
+        <div class="modal hidden" data-select="5">
+          <button class="close-modal">&times;</button>
+          <div class="subcontent">
+            <p>
+              If you would ask my friends, they would call css to be my arch
+              enemey, but i dont have any friends so i guess we will never find
+              out. I cried everytime i had to design an element of this
+              portfolio, i hope that explains it.
+            </p>
+            <img src="" alt="" />
+            <a href="www.google.com">link to Github</a>
+            <img src="" alt="" />
+            <a href=""></a>
+          </div>
         </div>
       </div>
       <div class="subheading alternate">
         <h3>Html</h3>
-        <div class="subcontent">
-          <p>
-            This is where it all began, the inception of the web dev love story.
-          </p>
+        <button class="show-modal" data-select="6">Come on show up</button>
+        <div class="modal hidden" data-select="6">
+          <button class="close-modal">&times;</button>
+          <div class="subcontent">
+            <p>
+              This is where it all began, inception of the web dev love story.
+            </p>
+            <img src="" alt="" />
+            <a href="www.google.com">link to Github</a>
+            <img src="" alt="" />
+            <a href=""></a>
+          </div>
         </div>
-      </div>
       <div class="subheading">
         <h3>React</h3>
-        <div class="subcontent">
-          <p>
-            I woke up with a question one morning. What's better than
+        <button class="show-modal" data-select="7">Come on show up</button>
+        <div class="modal hidden" data-select="7">
+          <button class="close-modal">&times;</button>
+          <div class="subcontent">
+            <p>
+              I woke up with a question one morning. What's better than
             javascript? A better sleep schedule? A better social life? A
             javascript framework? So anyways i started learning react
-          </p>
+            </p>
+            <img src="" alt="" />
+            <a href="www.google.com">link to Github</a>
+            <img src="" alt="" />
+            <a href=""></a>
+          </div>
         </div>
-      </div>
     </div>
 
     <div class="contactsSection">
