--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 
     <div class="intro section">
       <h1>नमस्ते 🙏🏻</h1>
-      <p>Myself Inesh and i love to code</p>
+      <p>
+        Myself Inesh an Information Science undergraduate. I like to explore and
+        create new stuff in the domain of computer science
+      </p>
     </div>
 
     <div class="languagesDisplay section">
@@ -148,6 +151,7 @@
             <a href=""></a>
           </div>
         </div>
+      </div>
       <div class="subheading">
         <h3>React</h3>
         <button class="show-modal" data-select="7">Come on show up</button>
@@ -156,8 +160,8 @@
           <div class="subcontent">
             <p>
               I woke up with a question one morning. What's better than
-            javascript? A better sleep schedule? A better social life? A
-            javascript framework? So anyways i started learning react
+              javascript? A better sleep schedule? A better social life? A
+              javascript framework? So anyways i started learning react
             </p>
             <img src="" alt="" />
             <a href="www.google.com">link to Github</a>
@@ -165,6 +169,7 @@
             <a href=""></a>
           </div>
         </div>
+      </div>
     </div>
 
     <div class="contactsSection">
