--- a/index.html
+++ b/index.html
@@ -24,21 +24,28 @@
 
     <div class="languagesDisplay section">
       <div class="lang_subdisplay">
-        <div>Java</div>
-        <div>JavaScript</div>
-        <div>Python</div>
+        <div class="nav-link" href="java">Java</div>
+        <div class="nav-link" href="javascript">JavaScript</div>
+        <div class="nav-link" href="python">Python</div>
       </div>
       <div class="lang_subdisplay">
-        <div>Solidity</div>
-        <div>Css</div>
-        <div>Html</div>
-        <div>React</div>
+        <div class="nav-link" href="solidity">Solidity</div>
+        <div class="nav-link" href="css">Css</div>
+        <div class="nav-link" href="html">Html</div>
+        <div class="nav-link" href="react">React</div>
       </div>
     </div>
 
     <div class="languageDescription section">
-      <div class="subheading">
+      <div class="subheading java">
         <h3>Java</h3>
+        <p>
+          From what's inside my cup for morning coffee to what i code in while
+          competitive programming, i prefer java. I have been practising data
+          structutres and algorithms using java and tried to build a respectable
+          profile accordingly on online coding platforms such as leetcode and
+          codechef.
+        </p>
         <button class="show-modal" data-select="1">Come on show up</button>
         <div class="modal hidden" data-select="1">
           <button class="close-modal">&times;</button>
@@ -57,7 +64,7 @@
           </div>
         </div>
       </div>
-      <div class="subheading alternate">
+      <div class="subheading javascript alternate">
         <h3>JavaScript</h3>
         <button class="show-modal" data-select="2">Come on show up</button>
         <div class="modal hidden" data-select="2">
@@ -77,7 +84,7 @@
           </div>
         </div>
       </div>
-      <div class="subheading">
+      <div class="subheading python">
         <h3>Python</h3>
         <button class="show-modal" data-select="3">Come on show up</button>
         <div class="modal hidden" data-select="3">
@@ -97,7 +104,7 @@
           </div>
         </div>
       </div>
-      <div class="subheading alternate">
+      <div class="subheading solidity alternate">
         <h3>Solidity</h3>
         <button class="show-modal" data-select="4">Come on show up</button>
         <div class="modal hidden" data-select="4">
@@ -117,7 +124,7 @@
           </div>
         </div>
       </div>
-      <div class="subheading">
+      <div class="subheading css">
         <h3>Css</h3>
         <button class="show-modal" data-select="5">Come on show up</button>
         <div class="modal hidden" data-select="5">
@@ -136,7 +143,7 @@
           </div>
         </div>
       </div>
-      <div class="subheading alternate">
+      <div class="subheading html alternate">
         <h3>Html</h3>
         <button class="show-modal" data-select="6">Come on show up</button>
         <div class="modal hidden" data-select="6">
@@ -152,7 +159,7 @@
           </div>
         </div>
       </div>
-      <div class="subheading">
+      <div class="subheading react">
         <h3>React</h3>
         <button class="show-modal" data-select="7">Come on show up</button>
         <div class="modal hidden" data-select="7">
