--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
     </div>
 
     <div class="contactsSection">
-      <div class="contacts">LinkedIN</div>
-      <div class="contacts">Gmail</div>
-      <div class="contacts">Github</div>
-      <div class="contacts">Leetcode</div>
+      <div class="contacts" href="https://www.google.com/">LinkedIN</div>
+      <div class="contacts" href="https://www.google.com/">Gmail</div>
+      <div class="contacts" href="https://www.google.com/">Github</div>
+      <div class="contacts" href="https://www.google.com/">Leetcode</div>
     </div>
 
     <div class="overlay hidden"></div>
