--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="languagesDisplay section">
       <div class="lang_subdisplay">
-        <div class="nav-link" href="java">Java</div>
+        <div class="nav-link" href="java" cursor="pointer">Java</div>
         <div class="nav-link" href="javascript">JavaScript</div>
         <div class="nav-link" href="python">Python</div>
       </div>
@@ -46,17 +46,17 @@
           profile accordingly on online coding platforms such as leetcode and
           codechef.
         </p>
-        <button class="show-modal" data-select="1">Come on show up</button>
+        <button class="show-modal" data-select="1">Show more...</button>
         <div class="modal hidden" data-select="1">
           <button class="close-modal">&times;</button>
           <div class="subcontent">
-            <p>
+            <!-- <p>
               From what's inside my cup for morning coffee to what i code in
               while competitive programming, i prefer java. I have been
               practising data structutres and algorithms using java and tried to
               build a respectable profile accordingly on online coding platforms
               such as leetcode and codechef.
-            </p>
+            </p> -->
             <img src="" alt="" />
             <a href="www.google.com">link to Github</a>
             <img src="" alt="" />
@@ -66,17 +66,24 @@
       </div>
       <div class="subheading javascript alternate">
         <h3>JavaScript</h3>
-        <button class="show-modal" data-select="2">Come on show up</button>
+        <p>
+          My love for javascript started as an escape from the horrors that css
+          gave me as a beginner web developer. Coming from java, i missed
+          writing logic and writing reason for things to work in html and css.
+          Hence i started learning javascript from online resources and a made a
+          few projects.
+        </p>
+        <button class="show-modal" data-select="2">Show more...</button>
         <div class="modal hidden" data-select="2">
           <button class="close-modal">&times;</button>
           <div class="subcontent">
-            <p>
+            <!-- <p>
               My love for javascript started as an escape from the horrors that
               css gave me as a beginner web developer. Coming from java, i
               missed writing logic and writing reason for things to work in html
               and css. Hence i started learning javascript from online resources
               and a made a few projects.
-            </p>
+            </p> -->
             <img src="" alt="" />
             <a href="www.google.com">link to Github</a>
             <img src="" alt="" />
@@ -86,17 +93,24 @@
       </div>
       <div class="subheading python">
         <h3>Python</h3>
-        <button class="show-modal" data-select="3">Come on show up</button>
+        <p>
+          My love for javascript started as an escape from the horrors that css
+          gave me as a beginner web developer. Coming from java, i missed
+          writing logic and writing reason for things to work in html and css.
+          Hence i started learning javascript from online resources and a made a
+          few projects.
+        </p>
+        <button class="show-modal" data-select="3">Show more...</button>
         <div class="modal hidden" data-select="3">
           <button class="close-modal">&times;</button>
           <div class="subcontent">
-            <p>
+            <!-- <p>
               I love to take up challanges, irrespective of how much they affect
               my migraine. Hence i tried my hands in python. For many python is
               the easiest language out there and syntax wise it is, but
               something about the comfort comes as a challange. Unlike reels on
               instagram, AI was the new cool thing i wanted to give a try.
-            </p>
+            </p> -->
             <img src="" alt="" />
             <a href="www.google.com">link to Github</a>
             <img src="" alt="" />
@@ -106,17 +120,24 @@
       </div>
       <div class="subheading solidity alternate">
         <h3>Solidity</h3>
-        <button class="show-modal" data-select="4">Come on show up</button>
+        <p>
+          Concept of decentralised information and ownership of data seems to be
+          the booming future in a world where privacy is at stake with every
+          single interaction over the internet. And when i came across the fact
+          that you can create de-centralised apps which can play with my
+          javascript, there was no holding me back. Sweet!
+        </p>
+        <button class="show-modal" data-select="4">Show more...</button>
         <div class="modal hidden" data-select="4">
           <button class="close-modal">&times;</button>
           <div class="subcontent">
-            <p>
+            <!-- <p>
               Concept of decentralised information and ownership of data seems
               to be the booming future in a world where privacy is at stake with
               every single interaction over the internet. And when i came across
               the fact that you can create de-centralised apps which can play
               with my javascript, there was no holding me back. Sweet!
-            </p>
+            </p> -->
             <img src="" alt="" />
             <a href="www.google.com">link to Github</a>
             <img src="" alt="" />
@@ -126,16 +147,22 @@
       </div>
       <div class="subheading css">
         <h3>Css</h3>
-        <button class="show-modal" data-select="5">Come on show up</button>
+        <p>
+          If you would ask my friends, they would call css to be my arch enemey,
+          but i dont have any friends so i guess we will never find out. I cried
+          everytime i had to design an element of this portfolio, i hope that
+          explains it.
+        </p>
+        <button class="show-modal" data-select="5">Show more...</button>
         <div class="modal hidden" data-select="5">
           <button class="close-modal">&times;</button>
           <div class="subcontent">
-            <p>
+            <!-- <p>
               If you would ask my friends, they would call css to be my arch
               enemey, but i dont have any friends so i guess we will never find
               out. I cried everytime i had to design an element of this
               portfolio, i hope that explains it.
-            </p>
+            </p> -->
             <img src="" alt="" />
             <a href="www.google.com">link to Github</a>
             <img src="" alt="" />
@@ -145,13 +172,14 @@
       </div>
       <div class="subheading html alternate">
         <h3>Html</h3>
-        <button class="show-modal" data-select="6">Come on show up</button>
+        <p>This is where it all began, inception of the web dev love story.</p>
+        <button class="show-modal" data-select="6">Show more...</button>
         <div class="modal hidden" data-select="6">
           <button class="close-modal">&times;</button>
           <div class="subcontent">
-            <p>
+            <!-- <p>
               This is where it all began, inception of the web dev love story.
-            </p>
+            </p> -->
             <img src="" alt="" />
             <a href="www.google.com">link to Github</a>
             <img src="" alt="" />
@@ -161,15 +189,20 @@
       </div>
       <div class="subheading react">
         <h3>React</h3>
-        <button class="show-modal" data-select="7">Come on show up</button>
+        <p>
+          I woke up with a question one morning. What's better than javascript?
+          A better sleep schedule? A better social life? A javascript framework?
+          So anyways i started learning react
+        </p>
+        <button class="show-modal" data-select="7">Show more...</button>
         <div class="modal hidden" data-select="7">
           <button class="close-modal">&times;</button>
           <div class="subcontent">
-            <p>
+            <!-- <p>
               I woke up with a question one morning. What's better than
               javascript? A better sleep schedule? A better social life? A
               javascript framework? So anyways i started learning react
-            </p>
+            </p> -->
             <img src="" alt="" />
             <a href="www.google.com">link to Github</a>
             <img src="" alt="" />
