--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>PortFolio</title>
     <link rel="stylesheet" href="welcome.css" />
     <link rel="stylesheet" href="modal.css" />
   </head>
@@ -50,20 +50,21 @@
         <div class="modal hidden" data-select="1">
           <button class="close-modal">&times;</button>
           <div class="subcontent">
-            <!-- <p>
-              From what's inside my cup for morning coffee to what i code in
-              while competitive programming, i prefer java. I have been
-              practising data structutres and algorithms using java and tried to
-              build a respectable profile accordingly on online coding platforms
-              such as leetcode and codechef.
-            </p> -->
+            <p>
+              If comfort movies can be a thing, so i can label java as my
+              comfort language. I use java to pracise and nurture my data
+              structutres and algorithm skills by solving problems on leetcode.
+            </p>
             <img src="" alt="" />
-            <a href="www.google.com">link to Github</a>
+            <a class="subconLinks" href="https://leetcode.com/persuitman8/"
+              >link to LeetCode profile</a
+            >
             <img src="" alt="" />
             <a href=""></a>
           </div>
         </div>
       </div>
+
       <div class="subheading javascript alternate">
         <h3>JavaScript</h3>
         <p>
@@ -77,20 +78,48 @@
         <div class="modal hidden" data-select="2">
           <button class="close-modal">&times;</button>
           <div class="subcontent">
-            <!-- <p>
-              My love for javascript started as an escape from the horrors that
-              css gave me as a beginner web developer. Coming from java, i
-              missed writing logic and writing reason for things to work in html
-              and css. Hence i started learning javascript from online resources
-              and a made a few projects.
-            </p> -->
-            <img src="" alt="" />
-            <a href="www.google.com">link to Github</a>
-            <img src="" alt="" />
-            <a href=""></a>
+            <p>
+              Javascript is what i look forward to whenever writing css and
+              html. I have done a few projects on JavaScript with some help and
+              guidance online <br />These projects vary from simple event
+              handling to api calling.
+            </p>
+            <ul>
+              <li>
+                Dice Game
+                <a
+                  href="https://ineshtandy.github.io/DiceGame_Js/"
+                  class="project-link"
+                  >link to working project</a
+                >
+              </li>
+              <li>
+                Banking Project
+                <a
+                  href="https://github.com/Ineshtandy/Bank_Js"
+                  class="project-link"
+                  >link to github repository</a
+                >
+              </li>
+              <li>
+                Mapty Project
+                <a
+                  href="https://github.com/Ineshtandy/MaptyJs"
+                  class="project-link"
+                  >link to working project</a
+                >
+                |
+                <a
+                  href="https://github.com/Ineshtandy/MaptyJs"
+                  class="project-link"
+                  >link to github repository</a
+                >
+              </li>
+            </ul>
           </div>
         </div>
       </div>
+
       <div class="subheading python">
         <h3>Python</h3>
         <p>
