PYTHON project update

--- a/index.html
+++ b/index.html
@@ -123,30 +123,36 @@
       <div class="subheading python">
         <h3>Python</h3>
         <p>
-          My love for javascript started as an escape from the horrors that css
-          gave me as a beginner web developer. Coming from java, i missed
-          writing logic and writing reason for things to work in html and css.
-          Hence i started learning javascript from online resources and a made a
-          few projects.
+          Apparently python is pretty famous among the cool kids so i could'nt
+          hold back from giving it a shot.
         </p>
         <button class="show-modal" data-select="3">Show more...</button>
         <div class="modal hidden" data-select="3">
           <button class="close-modal">&times;</button>
           <div class="subcontent">
-            <!-- <p>
-              I love to take up challanges, irrespective of how much they affect
-              my migraine. Hence i tried my hands in python. For many python is
-              the easiest language out there and syntax wise it is, but
-              something about the comfort comes as a challange. Unlike reels on
-              instagram, AI was the new cool thing i wanted to give a try.
-            </p> -->
-            <img src="" alt="" />
-            <a href="www.google.com">link to Github</a>
-            <img src="" alt="" />
-            <a href=""></a>
+            <p>Gave python a try working on some projects that seemed fun...</p>
+            <ul>
+              <li>
+                Drawing Board using Open CV
+                <a
+                  href="https://github.com/Ineshtandy/OpenCv_Drawing_Board"
+                  class="project-link"
+                  >link to github repository</a
+                >
+              </li>
+              <li>
+                Qr code Generator
+                <a
+                  href="https://github.com/Ineshtandy/PlayingWithPython/tree/main/qrCode"
+                  class="project-link"
+                  >link to github repository</a
+                >
+              </li>
+            </ul>
           </div>
         </div>
       </div>
+
       <div class="subheading solidity alternate">
         <h3>Solidity</h3>
         <p>
