--- a/index.html
+++ b/index.html
@@ -55,12 +55,9 @@
               comfort language. I use java to pracise and nurture my data
               structutres and algorithm skills by solving problems on leetcode.
             </p>
-            <img src="" alt="" />
-            <a class="subconLinks" href="https://leetcode.com/persuitman8/"
+            <a class="project-link" href="https://leetcode.com/persuitman8/"
               >link to LeetCode profile</a
             >
-            <img src="" alt="" />
-            <a href=""></a>
           </div>
         </div>
       </div>
@@ -86,7 +83,7 @@
             </p>
             <ul>
               <li>
-                Dice Game
+                Dice Game -
                 <a
                   href="https://ineshtandy.github.io/DiceGame_Js/"
                   class="project-link"
@@ -94,7 +91,7 @@
                 >
               </li>
               <li>
-                Banking Project
+                Banking Project -
                 <a
                   href="https://github.com/Ineshtandy/Bank_Js"
                   class="project-link"
@@ -102,7 +99,7 @@
                 >
               </li>
               <li>
-                Mapty Project
+                Mapty Project -
                 <a
                   href="https://github.com/Ineshtandy/MaptyJs"
                   class="project-link"
@@ -120,7 +117,41 @@
         </div>
       </div>
 
-      <div class="subheading python">
+      <div class="subheading react">
+        <h3>React</h3>
+        <p>
+          I woke up with a question one morning. What's better than javascript?
+          A better sleep schedule? A better social life? A javascript framework?
+          So anyways i started learning react
+        </p>
+        <button class="show-modal" data-select="7">Show more...</button>
+        <div class="modal hidden" data-select="7">
+          <button class="close-modal">&times;</button>
+          <div class="subcontent">
+            <ul>
+              <li>
+                Blog using React, learnt from NetNinja free Youtube course -
+                <a
+                  href="https://github.com/Ineshtandy/Blog-netnijaReactCourse"
+                  class="project-link"
+                  >link to github repository</a
+                >
+              </li>
+              <li>
+                To-Do list with included storage, learnt from free youtube
+                resource -
+                <a
+                  href="https://github.com/Ineshtandy/ToDoListReact"
+                  class="project-link"
+                  >link to github repository</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="subheading python alternate">
         <h3>Python</h3>
         <p>
           Apparently python is pretty famous among the cool kids so i could'nt
@@ -153,7 +184,7 @@
         </div>
       </div>
 
-      <div class="subheading solidity alternate">
+      <div class="subheading solidity">
         <h3>Solidity</h3>
         <p>
           Concept of decentralised information and ownership of data seems to be
@@ -166,21 +197,24 @@
         <div class="modal hidden" data-select="4">
           <button class="close-modal">&times;</button>
           <div class="subcontent">
-            <!-- <p>
-              Concept of decentralised information and ownership of data seems
-              to be the booming future in a world where privacy is at stake with
-              every single interaction over the internet. And when i came across
-              the fact that you can create de-centralised apps which can play
-              with my javascript, there was no holding me back. Sweet!
-            </p> -->
-            <img src="" alt="" />
-            <a href="www.google.com">link to Github</a>
-            <img src="" alt="" />
-            <a href=""></a>
+            <p>
+              A few code snippets gathered from my cryptographic exploraiton
+            </p>
+            <ul>
+              <li>
+                Learned the basics of solidity from metaschool
+                <a
+                  href="https://github.com/Ineshtandy/BlockChainBasics_metaSchool"
+                  class="project-link"
+                  >link to github repository</a
+                >
+              </li>
+            </ul>
           </div>
         </div>
       </div>
-      <div class="subheading css">
+
+      <div class="subheading css alternate">
         <h3>Css</h3>
         <p>
           If you would ask my friends, they would call css to be my arch enemey,
@@ -188,70 +222,37 @@
           everytime i had to design an element of this portfolio, i hope that
           explains it.
         </p>
-        <button class="show-modal" data-select="5">Show more...</button>
+        <!-- <button class="show-modal" data-select="5">Show more...</button>
         <div class="modal hidden" data-select="5">
           <button class="close-modal">&times;</button>
-          <div class="subcontent">
-            <!-- <p>
-              If you would ask my friends, they would call css to be my arch
-              enemey, but i dont have any friends so i guess we will never find
-              out. I cried everytime i had to design an element of this
-              portfolio, i hope that explains it.
-            </p> -->
-            <img src="" alt="" />
-            <a href="www.google.com">link to Github</a>
-            <img src="" alt="" />
-            <a href=""></a>
-          </div>
-        </div>
+          <div class="subcontent"></div>
+        </div> -->
       </div>
-      <div class="subheading html alternate">
+
+      <div class="subheading html">
         <h3>Html</h3>
         <p>This is where it all began, inception of the web dev love story.</p>
-        <button class="show-modal" data-select="6">Show more...</button>
+        <!-- <button class="show-modal" data-select="6">Show more...</button>
         <div class="modal hidden" data-select="6">
           <button class="close-modal">&times;</button>
           <div class="subcontent">
-            <!-- <p>
-              This is where it all began, inception of the web dev love story.
-            </p> -->
-            <img src="" alt="" />
-            <a href="www.google.com">link to Github</a>
-            <img src="" alt="" />
-            <a href=""></a>
           </div>
-        </div>
-      </div>
-      <div class="subheading react">
-        <h3>React</h3>
-        <p>
-          I woke up with a question one morning. What's better than javascript?
-          A better sleep schedule? A better social life? A javascript framework?
-          So anyways i started learning react
-        </p>
-        <button class="show-modal" data-select="7">Show more...</button>
-        <div class="modal hidden" data-select="7">
-          <button class="close-modal">&times;</button>
-          <div class="subcontent">
-            <!-- <p>
-              I woke up with a question one morning. What's better than
-              javascript? A better sleep schedule? A better social life? A
-              javascript framework? So anyways i started learning react
-            </p> -->
-            <img src="" alt="" />
-            <a href="www.google.com">link to Github</a>
-            <img src="" alt="" />
-            <a href=""></a>
-          </div>
-        </div>
+        </div> -->
       </div>
     </div>
 
     <div class="contactsSection">
-      <div class="contacts" href="https://www.google.com/">LinkedIN</div>
-      <div class="contacts" href="https://www.google.com/">Gmail</div>
-      <div class="contacts" href="https://www.google.com/">Github</div>
-      <div class="contacts" href="https://www.google.com/">Leetcode</div>
+      <div
+        class="contacts"
+        href="https://www.linkedin.com/in/inesh-tandon-2523a3260/"
+      >
+        LinkedIN
+      </div>
+      <!-- <div class="contacts" href="https://www.google.com/">Gmail</div> -->
+      <div class="contacts" href="https://github.com/Ineshtandy">Github</div>
+      <div class="contacts" href="https://leetcode.com/persuitman8/">
+        Leetcode
+      </div>
     </div>
 
     <div class="overlay hidden"></div>
