mapty working project link update

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <li>
                 Mapty Project -
                 <a
-                  href="https://github.com/Ineshtandy/MaptyJs"
+                  href="https://maptyjsproject.netlify.app"
                   class="project-link"
                   >link to working project</a
                 >
